# compass-io-cli

./: FUTURE_VISION.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  USAGE.md  api.py  basic_html_interface.html  dummy.pl  pyproject.toml  test_cli.py  test_scenarios.py
src/compass_io_cli/: __init__.py  functions.py  lenses.py  main.py  main.py.backup  models.py  natural_language.py
