[tool.poetry]
name = "compass-io-cli"
version = "0.1.0"
description = "A CLI for ethical reasoning and decision-making"
authors = ["Remi <remi@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
typing-extensions = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compass = "compass_io_cli.main:cli"